Fixed stars background clipping on ultrawide resolutions

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,16 +18,21 @@ html {
   overscroll-behavior: none;
 }
 
-a {
-  @apply transition-[text-shadow] duration-300 hover:[text-shadow:0_0_15px_whitesmoke];
-}
-
 code {
   font-family:
     source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
+/* Custom Breakpoints */
+@theme {
+  --breakpoint-3xl: 120rem;
+  --breakpoint-4xl: 200rem;
+}
+
 /* Glow on hover */
+a {
+  @apply transition-[text-shadow] duration-300 hover:[text-shadow:0_0_15px_whitesmoke];
+}
 
 /* Star Animation Stuff */
 #stars {
